--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
   <h1>Automations Toward Justice</h1>
   <p>Public Domain serverless codebase. If you would like to contribute to this public domanin project please open a Pull Request to the staging branch and we will review the code, request any changes, and potentially add you to the github organization</p>
-  <a href="https://github.com/automations-toward-justice/serverless-node">
+  <a href="https://github.com/automations-toward-justice/serverless-node">Node.js serverless codebase</a>
 </body>
 </html>
